--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/images/logo.png
     - assets/icons/qr_scanner.png
     - assets/icons/truck_blue.png
+    - assets/icons/error_sign.png
+    - assets/icons/check_green.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
