--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,19 @@
-org.gradle.jvmargs=-Xmx1536M
+# org.gradle.jvmargs=-Xmx1536M
+# android.useAndroidX=true
+# android.enableJetifier=true
+# kotlin.code.style=official
+
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Use the new plugin discovery mechanism
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+# Enable 16 KB page size support
+android.bundle.enableUncompressedNativeLibs=true
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
+# Note: 16 KB page size alignment is automatically handled by Android Gradle Plugin 8.1+
